[gd_scene load_steps=13 format=3 uid="uid://c028tj483n8nl"]

[ext_resource type="Script" path="res://scenes/ui/main_menu.gd" id="1_pfvan"]
[ext_resource type="Texture2D" uid="uid://bdh33jn7kv5he" path="res://assets/ui/main-menu.png" id="2_qn1xv"]
[ext_resource type="PackedScene" uid="uid://bmjie6wfb8vn7" path="res://scenes/ui/button.tscn" id="3_678qp"]
[ext_resource type="Texture2D" uid="uid://buk0j4pgt75k7" path="res://assets/ui/PLAY_BUTTON.png" id="4_jhm7w"]
[ext_resource type="Texture2D" uid="uid://c8fp0qn4gmrwq" path="res://assets/ui/CREDITS_BUTTON.png" id="4_whd07"]
[ext_resource type="Texture2D" uid="uid://cr62uv7dm7eid" path="res://assets/ui/PLAY_HOVER.png" id="5_08ecb"]
[ext_resource type="AudioStream" uid="uid://4846dhdnsdxq" path="res://assets/audio/music/A La Mode! (Intro).wav" id="5_ihg0b"]
[ext_resource type="BitMap" uid="uid://bi5dy2pmljfci" path="res://assets/ui/PLAY_BUTTON_BITMASK.png" id="6_1ecxg"]
[ext_resource type="AudioStream" uid="uid://cj3dsgsiqx3nn" path="res://assets/audio/music/A La Mode! (Loop).wav" id="6_6l73u"]
[ext_resource type="Texture2D" uid="uid://bk7766u5d5vdm" path="res://assets/ui/CREDITS_HOVER.png" id="7_0cyp0"]
[ext_resource type="Texture2D" uid="uid://bdk0ce1u78xo7" path="res://assets/ui/quit.png" id="9_hfnrj"]
[ext_resource type="Texture2D" uid="uid://dehfloehsla33" path="res://assets/ui/quit-hover.png" id="10_bdb06"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pfvan")

[node name="A-la-mode-menu" type="Sprite2D" parent="."]
position = Vector2(961.334, 539)
scale = Vector2(1.01296, 1.01296)
texture = ExtResource("2_qn1xv")

[node name="Play" parent="." instance=ExtResource("3_678qp")]
layout_mode = 2
offset_left = 1167.0
offset_top = 220.0
offset_right = 3087.0
offset_bottom = 1300.0
scale = Vector2(0.35, 0.35)
texture_normal = ExtResource("4_jhm7w")
texture_hover = ExtResource("5_08ecb")
texture_click_mask = ExtResource("6_1ecxg")

[node name="Credits" parent="." instance=ExtResource("3_678qp")]
layout_mode = 2
offset_left = 1195.0
offset_top = 466.0
offset_right = 3115.0
offset_bottom = 1546.0
scale = Vector2(0.35, 0.35)
texture_normal = ExtResource("4_whd07")
texture_hover = ExtResource("7_0cyp0")

[node name="Quit" parent="." instance=ExtResource("3_678qp")]
layout_mode = 2
offset_left = 1621.0
offset_top = 895.0
offset_right = 2054.0
offset_bottom = 1115.0
scale = Vector2(0.6, 0.6)
texture_normal = ExtResource("9_hfnrj")
texture_hover = ExtResource("10_bdb06")

[node name="IntroPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ihg0b")

[node name="LoopPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_6l73u")

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="finished" from="IntroPlayer" to="." method="_on_intro_player_finished"]
